--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,9 +9,9 @@
 <% include ../partials/entry.ejs%>
 <% include ../partials/what-is.ejs %>
 <% include ../partials/rules.ejs %>
-<% include ../partials/theme.ejs %>
-<% include ../partials/register.ejs %>
+<!--<% include ../partials/theme.ejs %>-->
 <% include ../partials/teams.ejs%>
+<% include ../partials/register.ejs %>
 <% include ../partials/discuss.ejs%>
 </body>
 </html>
