--- a/views/partials/discuss.ejs
+++ b/views/partials/discuss.ejs
@@ -1,7 +1,9 @@
-<div id="discuss" class="container-fluid border border-green"></div>
+<div id="discuss" class="container-fluid border discuss_border"></div>
 <div class="container-fluid register">
     <div class="container">
+        <br /><br />
         <div id="disqus_thread"></div>
+        <br /><br />
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES * * */
             var disqus_shortname = 'knockathon';
