--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -18,9 +18,9 @@
                     <li><a href="#final-demo">Final Demo Criteria</a></li>
                 </ul>
 
-            <li>
+            <!--<li>
                 <a href="#themes">Theme</a>
-            </li>
+            </li>-->
 
             <li>
                 <a href="#discuss">Discuss</a>
@@ -34,7 +34,12 @@
 
         <ul class="nav navbar-nav navbar-right f18 ">
             <li class="navbar-right">
-                <a href="#register-now" style="color:#F2DE9C!important">
+                <a href="#register-now" style="color:#9d9d9d!important">
+                    Revisit 2015
+                </a>
+            </li>
+            <li class="navbar-right">
+                <a href="#register-now" style="color:#fff!important">
                     Register now
                 </a>
             </li>
