--- a/views/partials/rules.ejs
+++ b/views/partials/rules.ejs
@@ -1,4 +1,4 @@
-<div class="container-fluid border border-gray"></div>
+<div class="container-fluid border rules_border"></div>
 <div class="container-fluid bg-gray rules">
     <div class="container">
         <div class="row">
@@ -9,78 +9,59 @@
         <div class="tk-anisette-petite">
             <div class="row">
 
-                <div id="team-formation" class="col-md-8 col-md-offset-0 list">
+                <div id="team-formation" class="col-md-12 col-md-offset-0 list">
                     <h2 class="medium">Team Formation</h2>
                     <ul>
                         <li>
-                            Each team should have minimum of 3 and maximum of 4 team members. This is very important.
+                            Each team should have minimum of 2 and maximum of 4 team members. This is very important.
                         </li>
                         <li>
                             Each team should have people playing two different roles &ndash;
                             <ul>
-                                <li><strong>Champs</strong>&ndash; those who knows how to create something such as
-                                    writing code or making maps. The technical person role.
+                                <li><strong>Champs</strong>&ndash; those who know how to create something, such as writing code or making maps. In other words, the technical role.
                                 </li>
                                 <li>
-                                    <strong>Hustlers</strong>&ndash; those who can plan, ideate, present, design etc.,
-                                    In other words, the non-technical role.
+                                    <strong>Hustlers</strong>&ndash; those who can plan, ideate, present, design etc., In other words, the non-technical role.
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            We recommend, 1 hustler and 2 champs if you're 3 in size or 1 hustler and 3
-                            champs if you're 4 in size. But there is no hard-rule in how you want to spread your team.
+                            We recommend, 1 hustler and 2 champs if you're 3 in size or 1 hustler and 3 champs if you're 4 in size. But there is no hard-rule in how you want to spread your team.
                         </li>
                         <li id="sec-office-stay">
-                            Also it is mandatory for team to stay in office during the Knockathon event till Saturday's
-                            Presentation. Ladies who are
-                            willing stay in office during night are welcome. But if they prefer to hack from home, that
-                            is fine too.
+                            Also, it is mandatory for team to stay in office during the Knockathon event till Saturday's Presentation. Ladies who are willing to stay in office during night are welcome. But if they prefer to hack from home, that is fine too.
                         </li>
                     </ul>
                 </div>
 
-                <div id="registration-process" class="col-md-8 col-md-offset-0 list">
+                <div id="registration-process" class="col-md-12 col-md-offset-0 list">
                     <h2 class="medium">Registration Process</h2>
                     <ul>
                         <li>
-                            As highlighted in <a href="#register-now">register now</a> section you should first of all
-                            have a team and team members identified before the registration opens. This means you'll
-                            have to register your teams as new Organizations on tryexzeo.com.
+                            The process is simple. Click on <a href="#register-now">register now</a> and drop in your entries to register for Knockathon 2016.
                         </li>
                         <li>
-                            Once the registration desk opens on Friday, 11th Sep at 6:30 PM, you and your team
-                            will submit a form with your team names and their roles, Github repo name to keep your code
-                            or any other files.
-                        </li>
-                        <li>
-                            Don't forget to collect your swags. It is only for participants. :)
+                            Don't forget to collect your swags from the registration desk on August 5, 2016 at 1800 hours. It is only for participants. :)
                         </li>
                     </ul>
                 </div>
 
 
-                <div id="rejection-criteria" class="col-md-8 col-md-offset-0 list">
+                <div id="rejection-criteria" class="col-md-12 col-md-offset-0 list">
                     <h2 class="medium">Rejection Criteria</h2>
                     <ul>
                         <li>
-                            Knockathon starts on Friday, 11th Sep at 6:30 PM and ends on Saturday at 11:59 PM
-                            (mid-night). Any code
-                            committed into your Github repo after 11.59 Saturday will be rejected for your final build.
-                            But there can be extreme cases. You may want to find legitimate reasons to convince
-                            Knockathon team.
+                            Knockathon starts on Friday, August 5. 2016 at 1800 hours and ends on Saturday, August 6, 2016 at 2400 hours (mid-night). Any code committed into your Github repo after the deadline, will be rejected for your final build. But there can be extreme cases. You may want to find legitimate reasons to convince the Knockathon team.
                         </li>
                         <li>
-                            During the concept demo on Saturday Morning, we merely look for some scribbled designs on a
-                            paper. Don't waste
-                            your time on making PPT or some neat design. However, if you don't have any solid idea, you
-                            can also provide the options you have in front you. <p><br/>In case, your idea collides with
-                                someone's or a rip-off of some well-known app it will be rejected or advised to change.
+                            During the concept demo on Saturday morning, we merely look for some scribbled designs on a paper. Don't waste your time on making PPT or some neat design. However, if you don't have any solid idea, you can also provide the options you have in front you.
+                            
+                            <p><br/>In case, your idea collides with someone else's or is a rip-off of some well-known app, it will be rejected or advised to change.
                             </p>
                         </li>
                         <li>
-                            During the event, it is mandatory for team members (<a href="#sec-office-stay">except for
-                                ladies</a>) to stay in office. If found otherwise, it may be a reason for rejection.
+                            During the event, it is mandatory for team members 
+                            (<a href="#sec-office-stay">except for ladies</a>) to stay in office. If found otherwise, it may be a reason for rejection.
                         </li>
                     </ul>
                 </div>
@@ -91,23 +72,14 @@
                         <li>
                             There will be three presentations &ndash;
                             <ul>
-                                <li><strong>Idea Presentation</strong> &ndash; An hour after registration. This is going
-                                    to be a very quick, punch
-                                    line presentation on your idea to other teams. This presentation is to avoid
-                                    confusions among other teams if they ended up thinking the same idea as of yours.
+                                <li><strong>Idea Presentation</strong> &ndash; An hour after registration. This is going to be a very quick, punch line presentation on your idea to other teams. This presentation is to avoid confusions among other teams in case they end up thinking the same idea  as yours.
                                 </li>
                                 <li>
-                                    <strong>Concept Presentation</strong> &ndash; You will present the concept on
-                                    Saturday the 12th Sep @ 7:30 AM to 9:00 AM. There may be eliminations if found the
-                                    idea is copied or not complying with theme. You always rethink a new one, it means,
-                                    the idea could be rejected but team can go back to drawing board.
+                                    <strong>Concept Presentation</strong> &ndash; You will present the concept on Saturday, August 6, 2016 at 0730 hours - 0900 hours. There may be eliminations if found the idea is copied or not complying with the theme. You always rethink a new one, it means, the idea could be rejected but team can go back to drawing board.
                                 </li>
                                 <li>
-                                    <strong>Demo Day</strong> &ndash; You will demo your app / product on Monday the
-                                    14th Sep in front of all our colleagues. And they are going to vote to show their
-                                    love.
-                                    Note: Audience vote accounts for 30% of the total score. The Voting will be
-                                    anonymous.
+                                    <strong>Demo Day</strong> &ndash; You will present a demo of your app / product on Monday, August 8, 2016, in       front of all your colleagues. And they are going to vote to show their love.
+                                    Note: Audience vote accounts for 30% of the total score. The voting will be anonymous.
                                 </li>
                             </ul>
                         </li>
@@ -115,7 +87,7 @@
                 </div>
 
 
-                <div id="schedule-timelines" class="col-md-8 col-md-offset-0 list">
+                <div id="schedule-timelines" class="col-md-12 col-md-offset-0 list">
                     <h2 class="medium">Schedule &amp; Timelines</h2>
                     <br/>
                     <table class="table table-striped" style="font-size: 14px!important;">
@@ -125,73 +97,68 @@
                             <th>Remarks</th>
                         </tr>
                         <tr>
-                            <td class="info" rowspan="4">Fri, 11th</td>
-                            <td>06:30 PM - 07:00 PM</td>
+                            <td class="info" rowspan="4">Fri, 5th</td>
+                            <td>1800 – 1900 hours</td>
                             <td>Registrations desk open</td>
                         </tr>
                         <tr>
-                            <td>07:00 PM</td>
+                            <td>1900 hours</td>
                             <td>Opening Bell</td>
                         </tr>
                         <tr>
-                            <td>07:00 PM &ndash; 07:30 PM</td>
-                            <td>Team introductions to others, Followed by idea presentation</td>
+                            <td>1900 &ndash; 1930 hours</td>
+                            <td>Team introductions to others, followed by idea presentation</td>
                         </tr>
                         <tr>
-                            <td>07:30 PM &ndash; 07:00 AM (+1)</td>
+                            <td>1930 &ndash; 0700 hours (+1)</td>
                             <td><code>Plan, Eat, Hack</code> <img
                                         src="http://diwc.co.uk/wp-content/uploads/2015/06/icon_6393.png" height="32"
                                         width="32"/><code>Plan, Eat, Hack</code></td>
                         </tr>
                         <tr>
-                            <td class="success" rowspan="5">Sat, 12th</td>
-                            <td>07:30 AM &ndash; 09:00 AM</td>
-                            <td><strong>Idea Mockup Presentation to Panel</strong></td>
+                            <td class="success" rowspan="5">Sat, 6th</td>
+                            <td>0730 &ndash; 0900 hours</td>
+                            <td><strong>Idea Mockup - Presentation to Panel</strong></td>
                         </tr>
                         <tr>
-                            <td>09:00 AM &ndash; 11:00 AM</td>
+                            <td>0900 &ndash; 1100 hours</td>
                             <td>Teams brain storms, place cards, planning phase</td>
                         </tr>
                         <tr>
-                            <td>10:30 AM &ndash; 06:30 PM</td>
+                            <td>1100 &ndash; 1800 hours</td>
                             <td><code>Eat, Hack, Eat, Hack</code></td>
                         </tr>
                         <tr>
-                            <td>06:30 PM &ndash; 08:00 PM</td>
+                            <td>1800 &ndash; 2000 hours</td>
                             <td><strong>Concept Presentation</strong></td>
                         </tr>
                         <tr>
-                            <td>08:00 PM &ndash; 11:59 PM</td>
+                            <td>2000 &ndash; 2400 hours</td>
                             <td>Make final changes if you feel like, or leave</td>
                         </tr>
                         <tr class="danger">
-                            <td>Mon, 14th</td>
-                            <td>11:00 AM &ndash; 01:00 PM</td>
+                            <td>Mon, 8th</td>
+                            <td>1700 &ndash; 1900 hours</td>
                             <td><strong>Final Demo</strong></td>
                         </tr>
                     </table>
                 </div>
 
-                <div id="final-demo" class="col-md-8 col-md-offset-0 list">
+                <div id="final-demo" class="col-md-12 col-md-offset-0 list">
                     <h2 class="medium">Final Demo Criteria</h2>
                     <ul>
-                        <li>You should have a complete application that functions well. Bugs are okay but should not
-                            catch our eyes. Make sure you do a good job of hiding them.
+                        <li>You should have a complete application that functions well. Bugs are okay but should not catch our eyes. Make sure you do a good job of hiding them.
                         </li>
-                        <li>Note that all of your colleagues are going to vote and they are biased. However
-                            your presentation and quality of the app / web app should convince them to change their
-                            mind.
+                        <li>Note that all of your colleagues are going to vote and they are biased. However, your presentation and quality of the app / web app should convince them to change their mind.
                         </li>
                         <li>
-                            We don't review the code or architecture you've used. Or whether you followed design
-                            principles nor unit tests. Don't waste your time making solid code rather focus on fine
-                            tuning user experience and presentation.
+                            We don't review the code or architecture you've used. Or whether you followed design principles nor unit tests. Don't waste your time making solid code rather focus on fine tuning user experience and presentation.
                         </li>
                         <li>
-                            Audience will be asking questions during your presentation, make sure entire team is
-                            answering questions. This shows how confidence your team is on the business of your app.
+                            Audience will be asking questions during your presentation, make sure entire team is answering questions. This shows how confident your team is on the business of your app.
                         </li>
                     </ul>
+                    <br /><br /><br />
                 </div>
 
             </div>
