--- a/views/partials/teams.ejs
+++ b/views/partials/teams.ejs
@@ -4,7 +4,7 @@
 <body>
 
 <div ng-app="teamApp" ng-controller="teamController">
-    <div class="container-fluid border border-gray"></div>
+    <div class="container-fluid border teams_border"></div>
     <div class="container-fluid bg-gray teams">
         <div class="container">
 
@@ -22,8 +22,7 @@
                     </p>
 
                     <p>
-                        <a href="#register-now">Register now</a>, you may not have slots in the teams as they are
-                        limited to 3-4 per team.
+                        <a href="#register-now">Register now</a>, you may not have slots in the teams as they are limited to 2-4 per team.
                     </p>
                 </div>
             </div>
