--- a/views/partials/theme.ejs
+++ b/views/partials/theme.ejs
@@ -1,4 +1,4 @@
-<div class="container-fluid border border-red"></div>
+<div class="container-fluid border theme_border"></div>
 <div class="container-fluid theme bg-red">
     <div class="container">
         <div class="row">
@@ -7,7 +7,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8 col-md-offset-0 tk-anisette-petite list">
+            <div class="col-md-12 col-md-offset-0 tk-anisette-petite list">
                 <p><strong>Now the plot thickens .. </strong></p>
 
                 <p>The theme will be disclosed on <strong class="themeu">September 11th morning</strong> in this very same section, so hang around this
