--- a/views/partials/what-is.ejs
+++ b/views/partials/what-is.ejs
@@ -1,5 +1,5 @@
-<div class="container-fluid border border-green"></div>
-<div class="container-fluid bg-green what-is-it">
+<div class="container-fluid border what-is-it-border"></div>
+<div class="container-fluid bg_brown what-is-it">
     <div class="container">
         <div class="row">
             <div class="col-md-offset-0 pd-5">
@@ -7,13 +7,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8 col-md-offset-0 tk-anisette-petite">
-                <p class="text-info" style="border:1px solid #31708f; padding:4px;">
+            <div class="col-md-12 col-md-offset-0 tk-anisette-petite">
+                <p class="text-info" style="border:1px solid #31708f;">
                     Knockathon (or <a href="https://en.wikipedia.org/wiki/Hackathon" target="_blank">Hackathon</a>, in
-                    general) is a very popular event in that computer programmers and
-                    others involved in software development and hardware development <strong>collaborate
-                        intensively</strong> to create a software or a hardware or even massage a data that is useful
-                    for someone.
+                    general) is a very popular event in which computer programmers and others involved in software and hardware development,                            <strong>collaborate intensively</strong> to create a software or a hardware or even massage a data that is useful for someone.
                 </p>
 
                 <p>
@@ -21,28 +18,24 @@
                 </p>
 
                 <p>
-                    Yes, as a participant, one has to demonstrate great focus and willing to take any shape in order to
-                    get something useful done within a time frame of 24-36 hours. It also means sleepless nights, lot
-                    of energy drinks, fun and obviously rewards.
+                    Yes, as a participant, one has to demonstrate great focus and willingness to take any shape in order to get something useful done within a time frame of 24-36 hours. It also means sleepless nights, lot of energy drinks, fun, and obviously rewards.
                 </p>
 
                 <p>
-                    The key to success is the IDEA. When you conceptualize an idea, keep in mind that you don't need an
-                    innovative one or at the same time a "copy-paste" idea.
+                    The key to success is the IDEA. When you conceptualize an idea, keep in mind that you don't need an innovative one or at the same time a "copy-paste" one.
                 </p>
 
                 <p>
-                    All you need is a winning idea. The one that you can complete with the pressure that builds up when
-                    time goes by and odds of losing the game due to missing use cases etc.,
+                    All you need is a winning idea. The one that you can complete with the pressure that builds up when time goes by and odds of losing the game due to missing use cases etc.,
                 </p>
 
                 <p>
-                    Most of all, it is an overall performance of a team starting from Ideation to Presentation.
+                    Most of all, it is an overall performance of a team starting from "Ideation" to "Presentation".
                 </p>
 
                 <p>
-                    Great. Now, get over to Google and search for some inspirations. Most importantly, make sure you
-                    thoroughly understand <a href="#rules">rules and guidelines</a>.
+                    Now, get over to Google and search for some inspirations. Most importantly, make sure you thoroughly understand the
+                    <a href="#rules">rules and guidelines</a>.
                 </p>
 
             </div>
