--- a/views/partials/entry.ejs
+++ b/views/partials/entry.ejs
@@ -6,10 +6,14 @@
             </svg>
         </div>
         <div class="row tit">
-            <h1 class="tk-droid-serif text-shadow brown">Exzeo Knockathon</h1>
+            <h1 class="tk-droid-serif text-shadow main_heading">Exzeo Knockathon</h1>
         </div>
         <div class="row stit tk-anisette-petite">
-            <h2 class="brown text-shadow">11 - 12 September 2015</h2>
+            <h2 class="sub_heading text-shadow">5 - 6 August 2016</h2>
+        </div>
+        <div id="time-div" class="row text-center">
+            <div class="clock"></div>
+            <p class="tk-acuta" id="timer-message"></p>
         </div>
     </div>
 </div>
