--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<title>Exzeo Knockathon 2015</title>
+<title>Exzeo Knockathon 2016</title>
 <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
 <script>
     (function (d) {
@@ -100,7 +100,7 @@
         var timerMessage = $("#timer-message");
 
         var start = new Date();
-        var target = new Date(2015, 8, 11, 6, 30, 0, 0);
+        var target = new Date(2016, 7, 5, 18, 00, 0, 0);
         var time = start.getTime() + dateDiffInDays(start, target) * 24 * 60 * 60 * 1000;
 
         var underline = function (val) {
@@ -164,8 +164,8 @@
             console.log("setting height for teams");
         }
 
-        $("#time-div").css("marginTop", newHeight / 4);
-        $(".main_logo").css("height", newHeight - 250);
+        /*$("#time-div").css("marginTop", newHeight / 4);*/
+        $(".main_logo").css("height", newHeight - 450);
     }
 
 </script>
