--- a/views/partials/register.ejs
+++ b/views/partials/register.ejs
@@ -1,4 +1,4 @@
-<div class="container-fluid border border-yellow"></div>
+<div class="container-fluid border register_border"></div>
 <div class="container-fluid bg-yellow register">
     <div class="container">
         <div class="row">
@@ -7,14 +7,13 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8 col-md-offset-0 tk-anisette-petite list">
+            <div class="col-md-12 col-md-offset-0 tk-anisette-petite list">
                 <p>
                     OK. So you're interested.
                 </p>
 
                 <p>
-                    There are two ways you can participate in the Knockathon. Either as a team member by joining some
-                    team or start your own team.
+                    There are two ways you can participate in the Knockathon 2016. Either as a team member by joining some team or start your own team.
                 </p>
 
                 <p>
@@ -23,9 +22,8 @@
 
                 <ul class="list">
                     <li>
-                        Signup for an organization in <a href="https://tryexzeo.com" target="_blank">tryexzeo.com</a>.
-                        You may want to use a new email address for that purpose, feel free to use gmail.com or any
-                        other free email service providers.
+                        Signup for an organization.
+                        You may want to use a new email address for that purpose, feel free to use gmail.com or any other free email service providers.
                     </li>
                     <li>
                         When you enter your organization name, <span class="registeru">have it prefixed with <i>knockathon-</i></span>,
@@ -41,10 +39,8 @@
                     </li>
                     <li>
                         Read <a href="#rules">rules and guidelines</a> to make sure your team is not rejected during
-                        registration. <span
-                                class="registeru">Send out invitations from your Exzeo organization account</span>,
-                        those
-                        who are interested can join you that way.
+                        registration. <span class="registeru">Send out invitations from your Exzeo organization account</span>,
+                        those who are interested can join you that way.
                     </li>
                 </ul>
 
@@ -54,9 +50,7 @@
 
                 <ul class="list">
                     <li>
-                        You will <span class="registeru">receive invitation emails to join an organization</span>, don't
-                        just go easy. Discuss and understand why you need to join their team. Once you're convinced
-                        accept the invitation. Make sure the role you're going to play correlates with your interest.
+                        You will <span class="registeru">receive invitation emails to join an organization</span>, don't just go easy. Discuss and understand why you need to join their team. Once you're convinced accept the invitation. Make sure the role you're going to play correlates with your interest.
                     </li>
                     <li>
                         If no one has invited you, DO NOT WORRY. <span class="registeru">Create your own team</span>.
@@ -70,8 +64,9 @@
                 <br/>
 
                 <p>
-                    You are ready to knockout. <strong>Good luck, Gents.</strong>
+                    You are ready to knockout. <strong>Good luck!</strong>
                 </p>
+                <br /><br /><br />
 
             </div>
         </div>
