Minor textual changes

--- a/views/partials/register.ejs
+++ b/views/partials/register.ejs
@@ -13,17 +13,17 @@
                 </p>
 
                 <p>
-                    There are two ways you can participate in the Knockathon 2016. Either as a team member by joining some team or start your own team.
+                    There are two ways you can participate in Knockathon 2016. One, as a team member by joining some team or two, start your own team.
                 </p>
 
                 <p>
-                    To <span class="registeru">create your own Knockathon team</span>, follow this steps &ndash;
+                    To <span class="registeru">create your own Knockathon team</span>, follow these steps &ndash;
                 </p>
 
                 <ul class="list">
                     <li>
                         Signup for an organization.
-                        You may want to use a new email address for that purpose, feel free to use gmail.com or any other free email service providers.
+                        You may want to use a new email address for that purpose. Feel free to use gmail.com or any other free email service providers.
                     </li>
                     <li>
                         When you enter your organization name, <span class="registeru">have it prefixed with <i>knockathon-</i></span>,
@@ -33,19 +33,19 @@
                         important.
                     </li>
                     <li>
-                        <span class="registeru">Look out for your team members</span>. You see, you need to sell your
-                        reputation to convince
-                        someone to join you instead of joining the other.
+                        <span class="registeru">Look out for your team members</span>. You need to sell your
+                        reputation in order to convince
+                        someone to join you instead of you joining the other team.
                     </li>
                     <li>
-                        Read <a href="#rules">rules and guidelines</a> to make sure your team is not rejected during
+                        Read the <a href="#rules">rules and guidelines</a> to make sure your team is not rejected during
                         registration. <span class="registeru">Send out invitations from your Exzeo organization account</span>,
                         those who are interested can join you that way.
                     </li>
                 </ul>
 
                 <p>
-                    To <span class="registeru">join an awesome team</span>, follow this steps &ndash;
+                    To <span class="registeru">join an awesome team</span>, follow these steps &ndash;
                 </p>
 
                 <ul class="list">
@@ -53,7 +53,7 @@
                         You will <span class="registeru">receive invitation emails to join an organization</span>, don't just go easy. Discuss and understand why you need to join their team. Once you're convinced accept the invitation. Make sure the role you're going to play correlates with your interest.
                     </li>
                     <li>
-                        If no one has invited you, DO NOT WORRY. <span class="registeru">Create your own team</span>.
+                        If no one has invited you, DO NOT WORRY! <span class="registeru">Create your own team</span>.
                         Don't laugh. Throw the shyness away and get ready to knock others off. Don't give up. It is okay
                         to loose than not fighting for it. After all, Knockathon is an internal event.
                     </li>
