--- a/views/partials/teams.ejs
+++ b/views/partials/teams.ejs
@@ -17,8 +17,8 @@
             <div class="row">
                 <div class="col-md-offset-0 pd-5 tk-anisette-petite">
                     <p>
-                        Here are the current status of teams participating in Knockathon, you don't see your name
-                        yet? <i>Isn't that sad</i>.
+                        Here is the current status of teams participating in Knockathon. You don't see your name
+                        yet? <i>Isn't that sad</i>?
                     </p>
 
                     <p>
