--- a/views/partials/what-is.ejs
+++ b/views/partials/what-is.ejs
@@ -14,11 +14,11 @@
                 </p>
 
                 <p>
-                    Note the "intense" word in above definition.
+                    Note the "intense" word in the above definition.
                 </p>
 
                 <p>
-                    Yes, as a participant, one has to demonstrate great focus and willingness to take any shape in order to get something useful done within a time frame of 24-36 hours. It also means sleepless nights, lot of energy drinks, fun, and obviously rewards.
+                    Yes, as a participant, one has to demonstrate great focus and willingness to take any shape in order to get something useful done within a time frame of 24-36 hours. It also means sleepless nights, a lot of energy drinks, fun, and obviously rewards.
                 </p>
 
                 <p>
@@ -26,7 +26,7 @@
                 </p>
 
                 <p>
-                    All you need is a winning idea. The one that you can complete with the pressure that builds up when time goes by and odds of losing the game due to missing use cases etc.,
+                    All you need is a winning idea. The one that you can complete with the pressure that builds up when time goes by and odds of losing the game due to missing use cases etc.
                 </p>
 
                 <p>
@@ -34,7 +34,7 @@
                 </p>
 
                 <p>
-                    Now, get over to Google and search for some inspirations. Most importantly, make sure you thoroughly understand the
+                    Now, get over to Google and search for some inspirations. More importantly, make sure you thoroughly understand the
                     <a href="#rules">rules and guidelines</a>.
                 </p>
 
