--- a/views/partials/entry.ejs
+++ b/views/partials/entry.ejs
@@ -9,7 +9,7 @@
             <h1 class="tk-droid-serif text-shadow main_heading">Exzeo Knockathon</h1>
         </div>
         <div class="row stit tk-anisette-petite">
-            <h2 class="sub_heading text-shadow">5 - 6 August 2016</h2>
+            <h2 class="sub_heading text-shadow">August 5- 6, 2016</h2>
         </div>
         <div id="time-div" class="row text-center">
             <div class="clock"></div>
