--- a/views/partials/rules.ejs
+++ b/views/partials/rules.ejs
@@ -21,7 +21,7 @@
                                 <li><strong>Champs</strong>&ndash; those who know how to create something, such as writing code or making maps. In other words, the technical role.
                                 </li>
                                 <li>
-                                    <strong>Hustlers</strong>&ndash; those who can plan, ideate, present, design etc., In other words, the non-technical role.
+                                    <strong>Hustlers</strong>&ndash; those who can plan, ideate, present, design etc. In other words, the non-technical role.
                                 </li>
                             </ul>
                         </li>
@@ -29,7 +29,7 @@
                             We recommend, 1 hustler and 2 champs if you're 3 in size or 1 hustler and 3 champs if you're 4 in size. But there is no hard-rule in how you want to spread your team.
                         </li>
                         <li id="sec-office-stay">
-                            Also, it is mandatory for team to stay in office during the Knockathon event till Saturday's Presentation. Ladies who are willing to stay in office during night are welcome. But if they prefer to hack from home, that is fine too.
+                            Also, it is mandatory for a team to stay in office during the Knockathon event till Saturday's Presentation. Ladies who are willing to stay in office during the night are welcome. But, if they prefer to hack from home, that is fine too.
                         </li>
                     </ul>
                 </div>
@@ -51,7 +51,7 @@
                     <h2 class="medium">Rejection Criteria</h2>
                     <ul>
                         <li>
-                            Knockathon starts on Friday, August 5. 2016 at 1800 hours and ends on Saturday, August 6, 2016 at 2400 hours (mid-night). Any code committed into your Github repo after the deadline, will be rejected for your final build. But there can be extreme cases. You may want to find legitimate reasons to convince the Knockathon team.
+                            Knockathon starts on Friday, August 5, 2016 at 1800 hours and ends on Saturday, August 6, 2016 at 2400 hours (mid-night). Any code committed into your Github repo after the deadline, will be rejected for your final build. But, there can be extreme cases. You may want to find legitimate reasons to convince the Knockathon team.
                         </li>
                         <li>
                             During the concept demo on Saturday morning, we merely look for some scribbled designs on a paper. Don't waste your time on making PPT or some neat design. However, if you don't have any solid idea, you can also provide the options you have in front you.
@@ -66,7 +66,7 @@
                     </ul>
                 </div>
 
-                <div id="presentations" class="col-md-8 col-md-offset-0 list">
+                <div id="presentations" class="col-md-12 col-md-offset-0 list">
                     <h2 class="medium">Presentations</h2>
                     <ul>
                         <li>
@@ -75,11 +75,11 @@
                                 <li><strong>Idea Presentation</strong> &ndash; An hour after registration. This is going to be a very quick, punch line presentation on your idea to other teams. This presentation is to avoid confusions among other teams in case they end up thinking the same idea  as yours.
                                 </li>
                                 <li>
-                                    <strong>Concept Presentation</strong> &ndash; You will present the concept on Saturday, August 6, 2016 at 0730 hours - 0900 hours. There may be eliminations if found the idea is copied or not complying with the theme. You always rethink a new one, it means, the idea could be rejected but team can go back to drawing board.
+                                    <strong>Concept Presentation</strong> &ndash; You'll present the concept on Saturday, August 6, 2016 at 0730 hours - 0900 hours. There may be eliminations if found the idea is copied or not complying with the theme. However, you can always rethink a new one! It means, the idea could be rejected but, the team can go back to their drawing boards.
                                 </li>
                                 <li>
-                                    <strong>Demo Day</strong> &ndash; You will present a demo of your app / product on Monday, August 8, 2016, in       front of all your colleagues. And they are going to vote to show their love.
-                                    Note: Audience vote accounts for 30% of the total score. The voting will be anonymous.
+                                    <strong>Demo Day</strong> &ndash; You will present a demo of your app / product on Monday, August 8, 2016, in       front of all your colleagues, and they are going to vote to show their love.
+                                    Note: The audience vote accounts for 30% of the total score. The voting will be anonymous.
                                 </li>
                             </ul>
                         </li>
@@ -99,7 +99,7 @@
                         <tr>
                             <td class="info" rowspan="4">Fri, 5th</td>
                             <td>1800 – 1900 hours</td>
-                            <td>Registrations desk open</td>
+                            <td>Registration desk opens</td>
                         </tr>
                         <tr>
                             <td>1900 hours</td>
@@ -122,7 +122,7 @@
                         </tr>
                         <tr>
                             <td>0900 &ndash; 1100 hours</td>
-                            <td>Teams brain storms, place cards, planning phase</td>
+                            <td>Teams brain storm, place cards, planning phase</td>
                         </tr>
                         <tr>
                             <td>1100 &ndash; 1800 hours</td>
@@ -134,7 +134,7 @@
                         </tr>
                         <tr>
                             <td>2000 &ndash; 2400 hours</td>
-                            <td>Make final changes if you feel like, or leave</td>
+                            <td>Make final changes, if you feel like, or leave</td>
                         </tr>
                         <tr class="danger">
                             <td>Mon, 8th</td>
@@ -149,13 +149,13 @@
                     <ul>
                         <li>You should have a complete application that functions well. Bugs are okay but should not catch our eyes. Make sure you do a good job of hiding them.
                         </li>
-                        <li>Note that all of your colleagues are going to vote and they are biased. However, your presentation and quality of the app / web app should convince them to change their mind.
+                        <li>Note that all of your colleagues are going to vote and they are biased. However, your presentation and quality of the app / web app, should convince them to change their mind.
                         </li>
                         <li>
-                            We don't review the code or architecture you've used. Or whether you followed design principles nor unit tests. Don't waste your time making solid code rather focus on fine tuning user experience and presentation.
+                            We don't review the code or architecture you've used, or whether you followed the design principles nor unit tests. Don't waste your time making solid code rather focus on fine tuning the user experience and presentation.
                         </li>
                         <li>
-                            Audience will be asking questions during your presentation, make sure entire team is answering questions. This shows how confident your team is on the business of your app.
+                            Audience will be asking questions during your presentation, make sure entire team is answering the questions. This shows how confident your team is on the business aspect of your app.
                         </li>
                     </ul>
                     <br /><br /><br />
