--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -23,10 +23,6 @@
             </li>-->
 
             <li>
-                <a href="#discuss">Discuss</a>
-            </li>
-
-            <li>
                 <a href="#teams">Teams</a>
             </li>
 
@@ -34,7 +30,7 @@
 
         <ul class="nav navbar-nav navbar-right f18 ">
             <li class="navbar-right">
-                <a href="#register-now" style="color:#9d9d9d!important">
+                <a href="/2015" style="color:#9d9d9d!important">
                     Revisit 2015
                 </a>
             </li>
