--- a/views/partials/register.ejs
+++ b/views/partials/register.ejs
@@ -22,7 +22,7 @@
 
                 <ul class="list">
                     <li>
-                        Signup for an organization.
+                        Create a new organization in <a href="https://tryexzeo.com" target="_blank">tryexzeo.com</a>.
                         You may want to use a new email address for that purpose. Feel free to use gmail.com or any other free email service providers.
                     </li>
                     <li>
