--- a/views/partials/rules.ejs
+++ b/views/partials/rules.ejs
@@ -13,7 +13,7 @@
                     <h2 class="medium">Team Formation</h2>
                     <ul>
                         <li>
-                            Each team should have minimum of 2 and maximum of 4 team members. This is very important.
+                            Each team should have minimum of 2 and maximum of 5 team members. This is very important.
                         </li>
                         <li>
                             Each team should have people playing two different roles &ndash;
@@ -38,7 +38,7 @@
                     <h2 class="medium">Registration Process</h2>
                     <ul>
                         <li>
-                            The process is simple. Click on <a href="#register-now">register now</a> and drop in your entries to register for Knockathon 2016.
+                            The process is simple. <a href="#register-now">Click here</a> to know the details. register now.
                         </li>
                         <li>
                             Don't forget to collect your swags from the registration desk on August 5, 2016 at 1800 hours. It is only for participants. :)
