--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,6 +12,6 @@
 <!--<% include ../partials/theme.ejs %>-->
 <% include ../partials/teams.ejs%>
 <% include ../partials/register.ejs %>
-<% include ../partials/discuss.ejs%>
+<!--<% include ../partials/discuss.ejs%>-->
 </body>
 </html>
