Added video on homepage

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -34,8 +34,8 @@
 
         <ul class="nav navbar-nav navbar-right f18 ">
             <li class="navbar-right">
-                <a href="#register-now" style="color:#F2DE9C!important">
-                    Register now
+                <a href="../" style="color:#F2DE9C!important">
+                    Visit 2016
                 </a>
             </li>
         </ul>
