--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -34,7 +34,7 @@
 
         <ul class="nav navbar-nav navbar-right f18 ">
             <li class="navbar-right">
-                <a href="../" style="color:#F2DE9C!important">
+                <a href="http://knockathon.exzeo.com/" style="color:#F2DE9C!important">
                     Visit 2016
                 </a>
             </li>
